spacing fixes

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -83,21 +83,23 @@ a:focus {
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: bold;
   line-height: 1.25;
+  font-weight: 200;
   color: #313131;
   text-rendering: optimizeLegibility;
 }
 h1 {
-  font-size: 2rem;
+  font-size: 150%;
+  font-weight: 250;
 }
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 120%;
+  font-weight: 100;
 }
 h3 {
   margin-top: 1.5rem;
-  font-size: 1.25rem;
+  font-size: 110%;
 }
 h4, h5, h6 {
   margin-top: 1rem;
@@ -344,7 +346,7 @@ tbody tr:nth-child(odd) th {
 .masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
-  margin-top: 3rem;
+  margin-top: 0rem;
   margin-bottom: 0rem;
 }
 .masthead-title {
@@ -388,7 +390,7 @@ tbody tr:nth-child(odd) th {
   padding-right: 1rem;
   margin-left:  auto;
   margin-right: auto;
-  margin-bottom: 4em;
+  margin-bottom: 2em;
 }
 
 /* Blog post or page title */
@@ -426,6 +428,7 @@ tbody tr:nth-child(odd) th {
 }
 .related-posts h3 {
   margin-top: 0;
+  font-size: 110%;
 }
 .related-posts li small {
   font-size: 75%;
@@ -439,6 +442,10 @@ tbody tr:nth-child(odd) th {
   color: inherit;
 }
 
+.footer {
+  padding-left: 3rem;
+  margin-left: auto;
+}
 
 /*
  * Pagination
